--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,11 +1,126 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 html,body,.page-host{
 	height: 100%;
+	font-family: 'alegreya_sansregular', Helvetica, Arial;
 }
-.margin-vertical{
-	margin: 30px 0;
+.sr-only{
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0,0,0,0);
+	border: 0;
 }
+.btn{
+	border: none;
+	text-transform: uppercase;
+	font-size: 18px;
+}
+
+.header{
+	height: 150px;
+	background: #cc0000;
+	position: relative;
+	background-image: url('../assets/header-background.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.add-form{
+	background: #f2f2f2;
+	max-width: 500px;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 100%;
+	margin: auto;
+	padding: 8px;
+	transform: translateY(-50%);
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.add-form .form-wrapper{
+	position: relative;
+}
+.add-form .field{
+	padding: 10px 8px;
+	padding-right: 20%;
+	width: 100%;
+	
+	font-size: 18px;
+	border: none;
+	border-bottom: 2px solid #006bd8;
+	background: #fff;
+	transition: padding-left .2s ease-out;
+}
+.add-form .field:focus{
+	outline: none;
+	padding-left: 14px;
+}
+.add-form .btn{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	padding: 12px 18px;
+	
+	background: #006bd8;
+	color: #fff;
+	transition: all .2s ease-out;
+}
+.add-form .btn:hover,
+.add-form .btn:focus{
+	background: #0c5db1;
+}
+.add-form .btn:active{
+	background: #4f7093;
+}
+
+.main-container{
+	max-width: 600px;
+	margin: 60px auto 10px;
+}
+
+.archive-item h4{
+	margin: 0 0 3px;
+	font-size: 20px;
+	font-weight: normal;
+}
+.archive-item a{
+	text-decoration: none;
+	color: #006bd8;
+}
+.archive-item h3{
+	margin: 0 0 3px;
+	font-size: 16px;
+	color: #21aa1a;
+	font-weight: normal;
+}
+.archive-item p{
+	margin: 0 0 10px;
+}
+.archive-item .btn-delete{
+	color: #db1515;
+	border: 2px solid #db1515;
+	background: transparent;
+	font-size: 15px;
+	padding: 3px 10px;
+	font-weight: bold;
+	transition: all .3s ease-out;
+}
+.archive-item .btn-delete:hover{
+	background: #db1515;
+	color: #fff;
+}
+
 iframe{
 	width: 100%;
-	min-height: calc(100% - 55px);
+	height: 100%;
 	border: none;
 }
