--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -22,6 +22,7 @@ html,body,.page-host{
 	border: none;
 	text-transform: uppercase;
 	font-size: 18px;
+	text-decoration: none;
 }
 
 .header{
@@ -146,4 +147,16 @@ iframe{
 	width: 100%;
 	height: 100%;
 	border: none;
+}
+.back{
+	position: fixed;
+	top: 0;
+	left: 0;
+	padding: 4px 10px;
+	background: #006bd8;
+	color: #fff;
+	opacity: .4;
+}
+.back:hover{
+	opacity: 1;
 }
